# mailbot3000

./: .env.example  .gitignore  README.md  commands.md  pyproject.toml  token.pickle  uv_commands_reference.txt
scripts/: check_setup.py  debug_emails.py  install_free_llms.py  setup_gmail.py  test_free_llms.py
src/: __init__.py  main.py
src/actions/: __init__.py  email_actions.py  gmail_actions.py
src/auth/: __init__.py  gmail_auth.py  microsoft_auth.py
src/config/: __init__.py  settings.py
src/email/: __init__.py  email_interface.py  fetcher.py  gmail_fetcher.py  processor.py
src/llm/: __init__.py  classifier.py  prompts.py
tests/: __init__.py  test_basic.py
