[project]
name = "outlook-ai-manager"
version = "0.1.0"
description = "AI-powered Outlook email management system"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Microsoft Graph API
    "msal>=1.26.0",
    "requests>=2.31.0",

    # Gmail API 
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.1.0", 
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.110.0",
    
    
    # LLM Integration (Free options)
    "groq>=0.4.0",
    "google-generativeai>=0.3.0",
    
    # Data handling
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    
    # Utilities
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.4",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
premium = [
    # Premium LLM options (paid)
    "openai>=1.10.0",
    "anthropic>=0.14.0",
]

[project.scripts]
mailbot = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true